--- a/package.json
+++ b/package.json
@@ -9,16 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "4.5.0",
+    "@trpc/client": "^9.26.0",
+    "@trpc/next": "^9.26.0",
+    "@trpc/react": "^9.26.0",
+    "@trpc/server": "^9.26.0",
+    "daisyui": "^2.33.0",
+    "nanoid": "^4.0.0",
     "next": "12.3.1",
+    "node-fetch": "2.6.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0",
+    "react-query": "^3.39.2",
+    "superjson": "^1.9.1",
+    "zod": "^3.17.3"
   },
   "devDependencies": {
-    "@types/node": "18.11.3",
+    "@types/node": "^18.11.3",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "autoprefixer": "^10.4.12",
     "eslint": "8.26.0",
     "eslint-config-next": "12.3.1",
+    "postcss": "^8.4.18",
+    "prisma": "4.5.0",
+    "tailwindcss": "^3.2.1",
     "typescript": "4.8.4"
   }
 }
