--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "postcss": "^8.4.18",
     "prisma": "4.5.0",
     "tailwindcss": "^3.2.1",
-    "typescript": "4.8.4"
+    "typescript": "4.8.4",
+    "vercel": "^28.4.12"
   }
 }
